--- a/assets/minecraft/lang/de_ch.json
+++ b/assets/minecraft/lang/de_ch.json
@@ -18,7 +18,7 @@
     "block.minecraft.yellow_shulker_box": "\u00a77Gelbi Shulkerchischte",
     "container.barrel": "\u00a77Fass",
     "container.beacon": "\u00a77L\u00fc\u00fcchtf\u00fc\u00fcr",
-    "container.blast_furnace": "\u00a77hochofe",
+    "container.blast_furnace": "\u00a77Hochofe",
     "container.brewing": "\u00a77Braustand",
     "container.cartography_table": "\u00a77Kartetisch",
     "container.chest": "\u00a77Chischte",
@@ -40,7 +40,7 @@
     "container.smoker": "\u00a77R\u00fccherofe",
     "container.stonecutter": "\u00a77Steis\u00e4gi",
     "container.upgrade": "\u00a77R\u00fcstig ufwert\u00e4",
-    "entity.minecraft.chest_minecart": "\u00a77G\u00fcterlore",
+    "entity.minecraft.chest_minecart": "\u00a77G\u00fceterlore",
     "entity.minecraft.horse": "\u00a77Ross",
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Muultier",
