--- a/assets/minecraft/lang/de_de.json
+++ b/assets/minecraft/lang/de_de.json
@@ -30,12 +30,12 @@
     "container.enchant": "\u00a77Verzaubern",
     "container.enderchest": "\u00a77Endertruhe",
     "container.furnace": "\u00a77Ofen",
-    "container.grindstone_title": "\u00a77Reparieren und entzaubern",
+    "container.grindstone_title": "\u00a77Reparatur & Entzaubern",
     "container.hopper": "\u00a77Trichter",
     "container.inventory": "\u00a77Inventar",
     "container.lectern": "\u00a77Lesepult",
     "container.loom": "\u00a77Webstuhl",
-    "container.repair": "\u00a77Amboss",
+    "container.repair": "\u00a77Reparieren & Benennen",
     "container.shulkerBox": "\u00a77Shulkerkiste",
     "container.smoker": "\u00a77R\u00e4ucherofen",
     "container.stonecutter": "\u00a77Steins\u00e4ge",
@@ -46,8 +46,8 @@
     "entity.minecraft.mule": "\u00a77Maultier",
     "entity.minecraft.skeleton_horse": "\u00a77Skelettpferd",
     "entity.minecraft.villager": "\u00a77Dorfbewohner",
-    "entity.minecraft.villager.armorer": "\u00a77R\u00fcstungsschmied",
-    "entity.minecraft.villager.butcher": "\u00a77Fleischer",
+    "entity.minecraft.villager.armorer": "\u00a77Panzermacher",
+    "entity.minecraft.villager.butcher": "\u00a77Metzger",
     "entity.minecraft.villager.cartographer": "\u00a77Kartograf",
     "entity.minecraft.villager.cleric": "\u00a77Geistlicher",
     "entity.minecraft.villager.farmer": "\u00a77Bauer",
