--- a/assets/minecraft/lang/enp.json
+++ b/assets/minecraft/lang/enp.json
@@ -1,21 +1,21 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Black Shulker Box",
-    "block.minecraft.blue_shulker_box": "\u00a77Blue Shulker Box",
-    "block.minecraft.brown_shulker_box": "\u00a77Brown Shulker Box",
-    "block.minecraft.cyan_shulker_box": "\u00a77Bluegreen Shulker Box",
-    "block.minecraft.gray_shulker_box": "\u00a77Gray Shulker Box",
-    "block.minecraft.green_shulker_box": "\u00a77Green Shulker Box",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Light Blue Shulker Box",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Light Gray Shulker Box",
-    "block.minecraft.lime_shulker_box": "\u00a77Light Green Shulker Box",
-    "block.minecraft.magenta_shulker_box": "\u00a77Bawsered Shulker Box",
-    "block.minecraft.orange_shulker_box": "\u00a77Yellowred Shulker Box",
-    "block.minecraft.pink_shulker_box": "\u00a77Pink Shulker Box",
-    "block.minecraft.purple_shulker_box": "\u00a77Bawse Shulker Box",
-    "block.minecraft.red_shulker_box": "\u00a77Red Shulker Box",
-    "block.minecraft.shulker_box": "\u00a77Shulker Box",
-    "block.minecraft.white_shulker_box": "\u00a77White Shulker Box",
-    "block.minecraft.yellow_shulker_box": "\u00a77Yellow Shulker Box",
+    "block.minecraft.black_shulker_box": "\u00a77Black Shulker Crate",
+    "block.minecraft.blue_shulker_box": "\u00a77Hewen Shulker Crate",
+    "block.minecraft.brown_shulker_box": "\u00a77Brown Shulker Crate",
+    "block.minecraft.cyan_shulker_box": "\u00a77Hewengreen Shulker Crate",
+    "block.minecraft.gray_shulker_box": "\u00a77Gray Shulker Crate",
+    "block.minecraft.green_shulker_box": "\u00a77Green Shulker Crate",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Light Hewen Shulker Crate",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Light Gray Shulker Crate",
+    "block.minecraft.lime_shulker_box": "\u00a77Light Green Shulker Crate",
+    "block.minecraft.magenta_shulker_box": "\u00a77Bawsered Shulker Crate",
+    "block.minecraft.orange_shulker_box": "\u00a77Yellowred Shulker Crate",
+    "block.minecraft.pink_shulker_box": "\u00a77Pink Shulker Crate",
+    "block.minecraft.purple_shulker_box": "\u00a77Bawse Shulker Crate",
+    "block.minecraft.red_shulker_box": "\u00a77Red Shulker Crate",
+    "block.minecraft.shulker_box": "\u00a77Shulker Crate",
+    "block.minecraft.white_shulker_box": "\u00a77White Shulker Crate",
+    "block.minecraft.yellow_shulker_box": "\u00a77Yellow Shulker Crate",
     "container.barrel": "\u00a77Coop",
     "container.beacon": "\u00a77Beacon",
     "container.blast_furnace": "\u00a77Blast Oven",
@@ -36,13 +36,13 @@
     "container.lectern": "\u00a77Reading Stand",
     "container.loom": "\u00a77Loom",
     "container.repair": "\u00a77Fettle & Name",
-    "container.shulkerBox": "\u00a77Shulker Box",
+    "container.shulkerBox": "\u00a77Shulker Crate",
     "container.smoker": "\u00a77Smoker",
     "container.stonecutter": "\u00a77Stonecutter",
     "container.upgrade": "\u00a77Better Gear",
-    "entity.minecraft.chest_minecart": "\u00a77Minecart with Chest",
+    "entity.minecraft.chest_minecart": "\u00a77Delvewagon with Chest",
     "entity.minecraft.horse": "\u00a77Horse",
-    "entity.minecraft.llama": "\u00a77Olf",
+    "entity.minecraft.llama": "\u00a77Drylandersheep",
     "entity.minecraft.mule": "\u00a77Mule",
     "entity.minecraft.skeleton_horse": "\u00a77Boneset Horse",
     "entity.minecraft.villager": "\u00a77Thorpsman",
@@ -81,6 +81,6 @@
     "merchant.level.2": "\u00a77Learner",
     "merchant.level.3": "\u00a77Fareman",
     "merchant.level.4": "\u00a77Cunningman",
-    "merchant.level.5": "\u00a77Master",
+    "merchant.level.5": "\u00a77Cunninglord",
     "merchant.trades": "\u00a77Trades"
 }
