--- a/assets/minecraft/lang/eo_uy.json
+++ b/assets/minecraft/lang/eo_uy.json
@@ -8,7 +8,7 @@
     "block.minecraft.light_blue_shulker_box": "\u00a77Helblua skatolo de \u015dulkro",
     "block.minecraft.light_gray_shulker_box": "\u00a77Helgriza skatolo de \u015dulkro",
     "block.minecraft.lime_shulker_box": "\u00a77Helverda skatolo de \u015dulkro",
-    "block.minecraft.magenta_shulker_box": "\u00a77Ma\u011denta skatolo de \u015dulkro",
+    "block.minecraft.magenta_shulker_box": "\u00a77Malva skatolo de \u015dulkro",
     "block.minecraft.orange_shulker_box": "\u00a77Oran\u011dkolora skatolo de \u015dulkro",
     "block.minecraft.pink_shulker_box": "\u00a77Rozkolora skatolo de \u015dulkro",
     "block.minecraft.purple_shulker_box": "\u00a77Violkolora skatolo de \u015dulkro",
@@ -17,18 +17,18 @@
     "block.minecraft.white_shulker_box": "\u00a77Blanka skatolo de \u015dulkro",
     "block.minecraft.yellow_shulker_box": "\u00a77Flava skatolo de \u015dulkro",
     "container.barrel": "\u00a77Barelo",
-    "container.beacon": "\u00a77Balizo",
+    "container.beacon": "\u00a77Lumstriilo",
     "container.blast_furnace": "\u00a77Altforno",
     "container.brewing": "\u00a77Eliksirfarilo",
     "container.cartography_table": "\u00a77Kartografitablo",
-    "container.chest": "\u00a77Kesto",
-    "container.chestDouble": "\u00a77Granda kesto",
+    "container.chest": "\u00a77Kofro",
+    "container.chestDouble": "\u00a77Granda kofro",
     "container.crafting": "\u00a77Konstruado",
     "container.creative": "\u00a77Objektselektado",
     "container.dispenser": "\u00a77\u0134etilo",
     "container.dropper": "\u00a77Donilo",
     "container.enchant": "\u00a77Sor\u0109ado",
-    "container.enderchest": "\u00a77Finejkesto",
+    "container.enderchest": "\u00a77Finejkofro",
     "container.furnace": "\u00a77Forno",
     "container.grindstone_title": "\u00a77Riparado kaj desor\u0109ado",
     "container.hopper": "\u00a77Funelo",
@@ -40,7 +40,7 @@
     "container.smoker": "\u00a77Fumilo",
     "container.stonecutter": "\u00a77\u015ctontran\u0109ilo",
     "container.upgrade": "\u00a77Plibonigi ekipa\u0135on",
-    "entity.minecraft.chest_minecart": "\u00a77\u0108aro kun kesto",
+    "entity.minecraft.chest_minecart": "\u00a77Vagoneto kun kofro",
     "entity.minecraft.horse": "\u00a77\u0108evalo",
     "entity.minecraft.llama": "\u00a77Lamo",
     "entity.minecraft.mule": "\u00a77Mulo",
