--- a/assets/minecraft/lang/es_ar.json
+++ b/assets/minecraft/lang/es_ar.json
@@ -56,7 +56,7 @@
     "entity.minecraft.villager.leatherworker": "\u00a77Peletero",
     "entity.minecraft.villager.librarian": "\u00a77Bibliotecario",
     "entity.minecraft.villager.mason": "\u00a77Alba\u00f1il",
-    "entity.minecraft.villager.nitwit": "\u00a77Idiota",
+    "entity.minecraft.villager.nitwit": "\u00a77Holgaz\u00e1n",
     "entity.minecraft.villager.none": "\u00a77Aldeano",
     "entity.minecraft.villager.shepherd": "\u00a77Pastor",
     "entity.minecraft.villager.toolsmith": "\u00a77Herrero",
