--- a/assets/minecraft/lang/eu_es.json
+++ b/assets/minecraft/lang/eu_es.json
@@ -1,21 +1,21 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Shulker beltzerako kaxa",
-    "block.minecraft.blue_shulker_box": "\u00a77Shulker urdinerako kaxa",
-    "block.minecraft.brown_shulker_box": "\u00a77Shulker marroirako kaxa",
-    "block.minecraft.cyan_shulker_box": "\u00a77Shulker turkesarako kaxa",
-    "block.minecraft.gray_shulker_box": "\u00a77Shulker griserako kaxa",
-    "block.minecraft.green_shulker_box": "\u00a77Shulker berderako kaxa",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Shulker urdin argirako kaxa",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Shulker gris argirako kaxa",
-    "block.minecraft.lime_shulker_box": "\u00a77Shulker berde limarako kaxa",
-    "block.minecraft.magenta_shulker_box": "\u00a77Shulker magentarako kaxa",
-    "block.minecraft.orange_shulker_box": "\u00a77Shulker laranjarako kaxa",
-    "block.minecraft.pink_shulker_box": "\u00a77Shulker arrosarako kaxa",
-    "block.minecraft.purple_shulker_box": "\u00a77Shulker morerako kaxa",
-    "block.minecraft.red_shulker_box": "\u00a77Shulker gorrirako kaxa",
-    "block.minecraft.shulker_box": "\u00a77Shulker kaxa",
-    "block.minecraft.white_shulker_box": "\u00a77Shulker zurirako kaxa",
-    "block.minecraft.yellow_shulker_box": "\u00a77Shulker horirako kaxa",
+    "block.minecraft.black_shulker_box": "\u00a77Shulker kutxa beltza",
+    "block.minecraft.blue_shulker_box": "\u00a77Shulker kutxa urdina",
+    "block.minecraft.brown_shulker_box": "\u00a77Shulker kutxa marroia",
+    "block.minecraft.cyan_shulker_box": "\u00a77Shulker kutxa ziana",
+    "block.minecraft.gray_shulker_box": "\u00a77Shulker kutxa grisa",
+    "block.minecraft.green_shulker_box": "\u00a77Shulker kutxa berdea",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Shulker kutxa urdin argia",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Shulker kutxa gris argia",
+    "block.minecraft.lime_shulker_box": "\u00a77Shulker kutxa berde lima",
+    "block.minecraft.magenta_shulker_box": "\u00a77Shulker kutxa magenta",
+    "block.minecraft.orange_shulker_box": "\u00a77Shulker kutxa laranja",
+    "block.minecraft.pink_shulker_box": "\u00a77Shulker kutxa arrosa",
+    "block.minecraft.purple_shulker_box": "\u00a77Shulker kutxa morea",
+    "block.minecraft.red_shulker_box": "\u00a77Shulker kutxa gorria",
+    "block.minecraft.shulker_box": "\u00a77Shulker kutxa",
+    "block.minecraft.white_shulker_box": "\u00a77Shulker kutxa zuria",
+    "block.minecraft.yellow_shulker_box": "\u00a77Shulker kutxa horia",
     "container.barrel": "\u00a77Upela",
     "container.beacon": "\u00a77Itsasargia",
     "container.blast_furnace": "\u00a77Labe garaia",
@@ -73,8 +73,8 @@
     "itemGroup.inventory": "\u00a77Biziraupen inbentarioa",
     "itemGroup.materials": "\u00a77Materialak",
     "itemGroup.misc": "\u00a77Hainbateko objektuak",
-    "itemGroup.redstone": "\u00a77Harrigorria",
-    "itemGroup.search": "\u00a77Bilatu elementuak",
+    "itemGroup.redstone": "\u00a77Redstone",
+    "itemGroup.search": "\u00a77Bilatu",
     "itemGroup.tools": "\u00a77Tresnak",
     "itemGroup.transportation": "\u00a77Garraioa",
     "merchant.level.1": "\u00a77Hasiberria",
