--- a/assets/minecraft/lang/ga_ie.json
+++ b/assets/minecraft/lang/ga_ie.json
@@ -79,7 +79,7 @@
     "itemGroup.transportation": "\u00a77Iompar",
     "merchant.level.1": "\u00a77N\u00fa\u00edosach",
     "merchant.level.2": "\u00a77Print\u00edseach",
-    "merchant.level.3": "\u00a77Saothra\u00ed",
+    "merchant.level.3": "\u00a77Giurn\u00e1la\u00ed",
     "merchant.level.4": "\u00a77Saineola\u00ed",
     "merchant.level.5": "\u00a77M\u00e1istir",
     "merchant.trades": "\u00a77Malairt\u00ed"
