--- a/assets/minecraft/lang/gl_es.json
+++ b/assets/minecraft/lang/gl_es.json
@@ -46,13 +46,13 @@
     "entity.minecraft.mule": "\u00a77Mula",
     "entity.minecraft.skeleton_horse": "\u00a77Cabalo esqueleto",
     "entity.minecraft.villager": "\u00a77Alde\u00e1n",
-    "entity.minecraft.villager.armorer": "\u00a77Armeiro",
+    "entity.minecraft.villager.armorer": "\u00a77Ferreiro de armaduras",
     "entity.minecraft.villager.butcher": "\u00a77Carniceiro",
     "entity.minecraft.villager.cartographer": "\u00a77Cart\u00f3grafo",
     "entity.minecraft.villager.cleric": "\u00a77Crego",
     "entity.minecraft.villager.farmer": "\u00a77Granxeiro",
     "entity.minecraft.villager.fisherman": "\u00a77Pescador",
-    "entity.minecraft.villager.fletcher": "\u00a77Frechador",
+    "entity.minecraft.villager.fletcher": "\u00a77Frecheiro",
     "entity.minecraft.villager.leatherworker": "\u00a77Peleteiro",
     "entity.minecraft.villager.librarian": "\u00a77Bibliotecario",
     "entity.minecraft.villager.mason": "\u00a77Albanel",
@@ -64,7 +64,7 @@
     "entity.minecraft.wandering_trader": "\u00a77Vendedor ambulante",
     "entity.minecraft.zombie_horse": "\u00a77Cabalo zombi",
     "gui.advancements": "\u00a7fProezas",
-    "itemGroup.brewing": "\u00a77Destilaci\u00f3n",
+    "itemGroup.brewing": "\u00a77Poci\u00f3ns",
     "itemGroup.buildingBlocks": "\u00a77Bloques de construci\u00f3n",
     "itemGroup.combat": "\u00a77Combate",
     "itemGroup.decorations": "\u00a77Bloques de decoraci\u00f3n",
@@ -72,9 +72,9 @@
     "itemGroup.hotbar": "\u00a77Barras de obxectos gardadas",
     "itemGroup.inventory": "\u00a77Inventario de supervivencia",
     "itemGroup.materials": "\u00a77Materiais",
-    "itemGroup.misc": "\u00a77Miscel\u00e1neo",
+    "itemGroup.misc": "\u00a77Miscel\u00e1nea",
     "itemGroup.redstone": "\u00a77Redstone",
-    "itemGroup.search": "\u00a77B\u00fasqueda",
+    "itemGroup.search": "\u00a77Procurar",
     "itemGroup.tools": "\u00a77Ferramentas",
     "itemGroup.transportation": "\u00a77Transporte",
     "merchant.level.1": "\u00a77Novato",
