--- a/assets/minecraft/lang/haw_us.json
+++ b/assets/minecraft/lang/haw_us.json
@@ -30,6 +30,7 @@
     "container.enchant": "\u00a77Ho\u02bbopi\u02bbo",
     "container.enderchest": "\u00a77Enekela Pahu",
     "container.furnace": "\u00a77Umu",
+    "container.grindstone_title": "\u00a77Ho\u02bboponopono & Disenchant",
     "container.hopper": "\u00a77Ka mea ho\u02bbopuka wikiwiki",
     "container.inventory": "\u00a77Ho\u02bbopi\u02bbi",
     "container.lectern": "\u00a77Lectern",
@@ -39,17 +40,32 @@
     "container.smoker": "\u00a77Pumekala",
     "container.stonecutter": "\u00a77Kopa\u02bbu",
     "container.upgrade": "\u00a77E ho\u02bbomaika\u02bbi \u02bboe i k\u0101u lako",
+    "entity.minecraft.chest_minecart": "\u00a77Minecart me ka pahu",
     "entity.minecraft.horse": "\u00a77Lio",
+    "entity.minecraft.llama": "\u00a77Llama",
     "entity.minecraft.mule": "\u00a77Miula",
     "entity.minecraft.skeleton_horse": "\u00a77Iwi kanaka lio",
     "entity.minecraft.villager": "\u00a77Kauhale",
     "entity.minecraft.villager.armorer": "\u00a77Ka mea ho\u02bbolimalima",
     "entity.minecraft.villager.butcher": "\u00a77Make",
+    "entity.minecraft.villager.cartographer": "\u00a77Mea kaha ki\u02bbi pa\u02bbi ki\u02bbi",
+    "entity.minecraft.villager.cleric": "\u00a77Kakauolelo",
     "entity.minecraft.villager.farmer": "\u00a77Mahiai",
     "entity.minecraft.villager.fisherman": "\u00a77Lawai\u02bba",
+    "entity.minecraft.villager.fletcher": "\u00a77Fletcher",
+    "entity.minecraft.villager.leatherworker": "\u00a77Hana \u02bbili",
+    "entity.minecraft.villager.librarian": "\u00a77Waihona puke",
+    "entity.minecraft.villager.mason": "\u00a77Mason",
+    "entity.minecraft.villager.nitwit": "\u00a77\u02bbO Nitwit",
     "entity.minecraft.villager.none": "\u00a77Kauhale",
+    "entity.minecraft.villager.shepherd": "\u00a77Kahuhipa",
+    "entity.minecraft.villager.toolsmith": "\u00a77Mea Hana Mea Hana",
+    "entity.minecraft.villager.weaponsmith": "\u00a77Mea Kaua Mea Paka",
+    "entity.minecraft.wandering_trader": "\u00a77Mea Kalepa holoholo",
     "entity.minecraft.zombie_horse": "\u00a77Huaka\u02bbi p\u014d lio",
+    "gui.advancements": "\u00a7f\u02bbO n\u0101 holomua",
     "itemGroup.hotbar": "\u00a77N\u0101 Hotbars i M\u0101lama \u02bbia",
+    "itemGroup.inventory": "\u00a77Inventory Ola",
     "merchant.level.1": "\u00a77\u02bbO Novice",
     "merchant.level.2": "\u00a77Kumu",
     "merchant.level.3": "\u00a77Hele",
