--- a/assets/minecraft/lang/isv.json
+++ b/assets/minecraft/lang/isv.json
@@ -1,28 +1,28 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77\u010crna \u0161alkerova skrinja",
+    "block.minecraft.black_shulker_box": "\u00a77\u010crna \u0161alkerova krabka",
     "block.minecraft.blue_shulker_box": "\u00a77Modra \u0161alkerova skrinja",
-    "block.minecraft.brown_shulker_box": "\u00a77Kori\u010dneva \u0161alkerova skrinja",
-    "block.minecraft.cyan_shulker_box": "\u00a77Turkysova \u0161alkerova skrinja",
-    "block.minecraft.gray_shulker_box": "\u00a77Siva \u0161alkerova skrinja",
-    "block.minecraft.green_shulker_box": "\u00a77Zelena \u0161alkerova skrinja",
+    "block.minecraft.brown_shulker_box": "\u00a77Kori\u010dneva \u0161alkerova krabka",
+    "block.minecraft.cyan_shulker_box": "\u00a77Turkysova \u0161alkerova krabka",
+    "block.minecraft.gray_shulker_box": "\u00a77Siva \u0161alkerova krabka",
+    "block.minecraft.green_shulker_box": "\u00a77Zelena \u0161alkerova krabka",
     "block.minecraft.light_blue_shulker_box": "\u00a77Jasnomodra \u0161alkerova skrinja",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Jasnosiva \u0161alkerova skrinja",
-    "block.minecraft.lime_shulker_box": "\u00a77Jasnozelena \u0161alkerova skrinja",
-    "block.minecraft.magenta_shulker_box": "\u00a77Purpurna \u0161alkerova skrinja",
-    "block.minecraft.orange_shulker_box": "\u00a77Oran\u017eeva \u0161alkerova skrinja",
-    "block.minecraft.pink_shulker_box": "\u00a77Rozova \u0161alkerova skrinja",
-    "block.minecraft.purple_shulker_box": "\u00a77Fioletova \u0161alkerova skrinja",
-    "block.minecraft.red_shulker_box": "\u00a77\u010crvena \u0161alkerova skrinja",
-    "block.minecraft.shulker_box": "\u00a77\u0160alkerova skrinja",
-    "block.minecraft.white_shulker_box": "\u00a77B\u011bla \u0161alkerova skrinja",
-    "block.minecraft.yellow_shulker_box": "\u00a77\u017dolta \u0161alkerova skrinja",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Jasnosiva \u0161alkerova krabka",
+    "block.minecraft.lime_shulker_box": "\u00a77Jasnozelena \u0161alkerova krabka",
+    "block.minecraft.magenta_shulker_box": "\u00a77Purpurna \u0161alkerova krabka",
+    "block.minecraft.orange_shulker_box": "\u00a77Oran\u017eeva \u0161alkerova krabka",
+    "block.minecraft.pink_shulker_box": "\u00a77Rozova \u0161alkerova krabka",
+    "block.minecraft.purple_shulker_box": "\u00a77Fioletova \u0161alkerova krabka",
+    "block.minecraft.red_shulker_box": "\u00a77\u010crvena \u0161alkerova krabka",
+    "block.minecraft.shulker_box": "\u00a77\u0160alkerova krabka",
+    "block.minecraft.white_shulker_box": "\u00a77B\u011bla \u0161alkerova krabka",
+    "block.minecraft.yellow_shulker_box": "\u00a77\u017dolta \u0161alkerova krabka",
     "container.barrel": "\u00a77Bo\u010dka",
     "container.beacon": "\u00a77Sv\u011btilnik",
     "container.blast_furnace": "\u00a77Gore\u010di pe\u010d",
     "container.brewing": "\u00a77Napitnik",
     "container.cartography_table": "\u00a77Kartografi\u010dny stol",
-    "container.chest": "\u00a77Skladi\u0161\u010de",
-    "container.chestDouble": "\u00a77Veliko skladi\u0161\u010de",
+    "container.chest": "\u00a77Skrinja",
+    "container.chestDouble": "\u00a77Velika skrinja",
     "container.crafting": "\u00a77Remeslo",
     "container.creative": "\u00a77Izbor pr\u011bdmeta",
     "container.dispenser": "\u00a77Izkydatnik",
@@ -36,11 +36,11 @@
     "container.lectern": "\u00a77Pult",
     "container.loom": "\u00a77Stanok",
     "container.repair": "\u00a77Napraviti i nazvati",
-    "container.shulkerBox": "\u00a77\u0160alkerova skrinja",
+    "container.shulkerBox": "\u00a77\u0160alkerova krabka",
     "container.smoker": "\u00a77Zape\u010d",
     "container.stonecutter": "\u00a77Kamenos\u011bkator",
     "container.upgrade": "\u00a77Ulu\u010d\u0161iti orudovanje",
-    "entity.minecraft.chest_minecart": "\u00a77Vozok so skladi\u0161\u010dem",
+    "entity.minecraft.chest_minecart": "\u00a77Vagonetka so skrinjoju",
     "entity.minecraft.horse": "\u00a77Konj",
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Mul",
@@ -73,7 +73,7 @@
     "itemGroup.inventory": "\u00a77Imutok pr\u011b\u017eitja",
     "itemGroup.materials": "\u00a77Materialy",
     "itemGroup.misc": "\u00a77Razno",
-    "itemGroup.redstone": "\u00a77Mehanizmy",
+    "itemGroup.redstone": "\u00a77Redstoun",
     "itemGroup.search": "\u00a77Iskalnik",
     "itemGroup.tools": "\u00a77Instrumenty",
     "itemGroup.transportation": "\u00a77Pr\u011bvoz",
