--- a/assets/minecraft/lang/li_li.json
+++ b/assets/minecraft/lang/li_li.json
@@ -39,7 +39,7 @@
     "container.shulkerBox": "\u00a77Shulkerdoes",
     "container.smoker": "\u00a77Rouker",
     "container.stonecutter": "\u00a77Sjteinsjnieder",
-    "container.upgrade": "\u00a77Upgrade Oetrusting",
+    "container.upgrade": "\u00a77Upgrade oetrusting",
     "entity.minecraft.chest_minecart": "\u00a77Mienkar mit kis",
     "entity.minecraft.horse": "\u00a77Paerd",
     "entity.minecraft.llama": "\u00a77Lama",
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77Gevecht",
     "itemGroup.decorations": "\u00a77Decoratieve blokken",
     "itemGroup.food": "\u00a77Voedsel",
-    "itemGroup.hotbar": "\u00a77Opgeslaage Hotbars",
+    "itemGroup.hotbar": "\u00a77Opgeslaage werkbalke",
     "itemGroup.inventory": "\u00a77Inventaris",
     "itemGroup.materials": "\u00a77Materialen",
     "itemGroup.misc": "\u00a77Diversen",
@@ -78,8 +78,8 @@
     "itemGroup.tools": "\u00a77Gereedsjap",
     "itemGroup.transportation": "\u00a77Vervoer",
     "merchant.level.1": "\u00a77Starter",
-    "merchant.level.2": "\u00a77Lierlinge",
-    "merchant.level.3": "\u00a77Knecht",
+    "merchant.level.2": "\u00a77Lierling",
+    "merchant.level.3": "\u00a77Reiziger",
     "merchant.level.4": "\u00a77Expert",
     "merchant.level.5": "\u00a77Meister",
     "merchant.trades": "\u00a77Ruilopties"
