--- a/assets/minecraft/lang/nds_de.json
+++ b/assets/minecraft/lang/nds_de.json
@@ -1,13 +1,13 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Schwarte Shulkerkist",
+    "block.minecraft.black_shulker_box": "\u00a77Swatte Shulkerkist",
     "block.minecraft.blue_shulker_box": "\u00a77Blaoe Shulkerkist",
     "block.minecraft.brown_shulker_box": "\u00a77Bruune Shulkerkist",
-    "block.minecraft.cyan_shulker_box": "\u00a77T\u00fcrkise Shulkerkist",
-    "block.minecraft.gray_shulker_box": "\u00a77Graue Shulkerkist",
-    "block.minecraft.green_shulker_box": "\u00a77Gr\u00f6ne Shulkerkist",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Hillblaoe Shulkerkist",
+    "block.minecraft.cyan_shulker_box": "\u00a77Blaogr\u00f6\u00f6ne Shulkerkist",
+    "block.minecraft.gray_shulker_box": "\u00a77Graoe Shulkerkist",
+    "block.minecraft.green_shulker_box": "\u00a77Gr\u00f6\u00f6ne Shulkerkist",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Lechtblaoe Shulkerkist",
     "block.minecraft.light_gray_shulker_box": "\u00a77Griese Shulkerkist",
-    "block.minecraft.lime_shulker_box": "\u00a77Hillgr\u00f6ne Shulkerkist",
+    "block.minecraft.lime_shulker_box": "\u00a77Lechtgr\u00f6\u00f6ne Shulkerkist",
     "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shulkerkist",
     "block.minecraft.orange_shulker_box": "\u00a77Geelroote Shulkerkist",
     "block.minecraft.pink_shulker_box": "\u00a77Fienroote Shulkerkist",
@@ -35,7 +35,7 @@
     "container.inventory": "\u00a77Taske",
     "container.lectern": "\u00a77Leespult",
     "container.loom": "\u00a77Weevstohl",
-    "container.repair": "\u00a77Ambold",
+    "container.repair": "\u00a77B\u00f6ten & N\u00e4\u00f6men",
     "container.shulkerBox": "\u00a77Shulkerkist",
     "container.smoker": "\u00a77R\u00f6kelaven",
     "container.stonecutter": "\u00a77Steensaag",
@@ -45,7 +45,7 @@
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Muuldier",
     "entity.minecraft.skeleton_horse": "\u00a77Skeletpeerd",
-    "entity.minecraft.villager": "\u00a77D\u00f6rpinwohner",
+    "entity.minecraft.villager": "\u00a77D\u00f6rpsbewahner",
     "entity.minecraft.villager.armorer": "\u00a77R\u00fcstsmitg",
     "entity.minecraft.villager.butcher": "\u00a77Sl\u00e4chter",
     "entity.minecraft.villager.cartographer": "\u00a77Kartograaf",
@@ -55,9 +55,9 @@
     "entity.minecraft.villager.fletcher": "\u00a77Pielmaker",
     "entity.minecraft.villager.leatherworker": "\u00a77Gi\u00e4rwer",
     "entity.minecraft.villager.librarian": "\u00a77Bibliotekaar",
-    "entity.minecraft.villager.mason": "\u00a77M\u00fc\u00fcrker",
+    "entity.minecraft.villager.mason": "\u00a77M\u00fcerer",
     "entity.minecraft.villager.nitwit": "\u00a77D\u00f6rpstruttel",
-    "entity.minecraft.villager.none": "\u00a77D\u00f6rpinwohner",
+    "entity.minecraft.villager.none": "\u00a77D\u00f6rpsbewahner",
     "entity.minecraft.villager.shepherd": "\u00a77Sch\u00e4\u00f6per",
     "entity.minecraft.villager.toolsmith": "\u00a77Groovsmitg",
     "entity.minecraft.villager.weaponsmith": "\u00a77Wapensmitg",
