--- a/assets/minecraft/lang/oc_fr.json
+++ b/assets/minecraft/lang/oc_fr.json
@@ -1,11 +1,11 @@
 {
     "block.minecraft.black_shulker_box": "\u00a77B\u00f3stia de Shulker negra",
     "block.minecraft.blue_shulker_box": "\u00a77B\u00f3stia de Shulker blava",
-    "block.minecraft.brown_shulker_box": "\u00a77B\u00f3stia de Shulker marron",
+    "block.minecraft.brown_shulker_box": "\u00a77B\u00f3stia de Shulker bruna",
     "block.minecraft.cyan_shulker_box": "\u00a77B\u00f3stia de Shulker cian",
     "block.minecraft.gray_shulker_box": "\u00a77B\u00f3stia de Shulker grisa",
     "block.minecraft.green_shulker_box": "\u00a77B\u00f3stia de Shulker verda",
-    "block.minecraft.light_blue_shulker_box": "\u00a77B\u00f3stia de Shulker blau c\u00e8l",
+    "block.minecraft.light_blue_shulker_box": "\u00a77B\u00f3stia de Shulker blau clar",
     "block.minecraft.light_gray_shulker_box": "\u00a77B\u00f3stia de Shulker gris clar",
     "block.minecraft.lime_shulker_box": "\u00a77B\u00f3stia de Shulker verd clar",
     "block.minecraft.magenta_shulker_box": "\u00a77B\u00f3stia de Shulker magenta",
@@ -20,6 +20,7 @@
     "container.beacon": "\u00a77Balisa",
     "container.blast_furnace": "\u00a77Forn\u00e8u de fusion",
     "container.brewing": "\u00a77Alambic",
+    "container.cartography_table": "\u00a77Taula de cartografia",
     "container.chest": "\u00a77C\u00f2fre",
     "container.chestDouble": "\u00a77C\u00f2fre Grand",
     "container.crafting": "\u00a77Fabricacion",
@@ -30,12 +31,14 @@
     "container.enderchest": "\u00a77C\u00f2fre de l'Ender",
     "container.furnace": "\u00a77Forn",
     "container.hopper": "\u00a77Embut",
+    "container.inventory": "\u00a77Inventari",
     "container.lectern": "\u00a77Pupitre",
-    "container.loom": "\u00a77Mesti\u00e8r a t\u00e9isser",
+    "container.loom": "\u00a77Teli\u00e8r",
     "container.repair": "\u00a77Reparar e Nomenar",
     "container.shulkerBox": "\u00a77B\u00f3stia de Shulker",
     "container.smoker": "\u00a77Fumador",
-    "entity.minecraft.chest_minecart": "\u00a77Vagonet amb un C\u00f2fre",
+    "container.stonecutter": "\u00a77Peiri\u00e8r",
+    "entity.minecraft.chest_minecart": "\u00a77Vagonet amb c\u00f2fre",
     "entity.minecraft.horse": "\u00a77Caval",
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Mula",
@@ -47,8 +50,8 @@
     "entity.minecraft.villager.cleric": "\u00a77Eclesiastic",
     "entity.minecraft.villager.farmer": "\u00a77Agricultor",
     "entity.minecraft.villager.fisherman": "\u00a77Pescaire",
-    "entity.minecraft.villager.fletcher": "\u00a77Vendeire de Sagetas",
-    "entity.minecraft.villager.leatherworker": "\u00a77maroquini\u00e8r",
+    "entity.minecraft.villager.fletcher": "\u00a77Vendeire de sagetas",
+    "entity.minecraft.villager.leatherworker": "\u00a77Curati\u00e8r",
     "entity.minecraft.villager.librarian": "\u00a77Librari",
     "entity.minecraft.villager.nitwit": "\u00a77Pi\u00f2t",
     "entity.minecraft.villager.none": "\u00a77Vilatg\u00e9s",
@@ -68,6 +71,7 @@
     "itemGroup.transportation": "\u00a77Transp\u00f2rt",
     "merchant.level.1": "\u00a77Novici",
     "merchant.level.2": "\u00a77Aprend\u00eds",
+    "merchant.level.3": "\u00a77Companhon",
     "merchant.level.4": "\u00a77Exp\u00e8rt",
     "merchant.level.5": "\u00a77M\u00e8stre"
 }
