--- a/assets/minecraft/lang/pt_br.json
+++ b/assets/minecraft/lang/pt_br.json
@@ -46,7 +46,7 @@
     "entity.minecraft.mule": "\u00a77Mula",
     "entity.minecraft.skeleton_horse": "\u00a77Cavalo-esqueleto",
     "entity.minecraft.villager": "\u00a77Alde\u00e3o",
-    "entity.minecraft.villager.armorer": "\u00a77Ferreiro de armaduras",
+    "entity.minecraft.villager.armorer": "\u00a77Armadureiro",
     "entity.minecraft.villager.butcher": "\u00a77A\u00e7ougueiro",
     "entity.minecraft.villager.cartographer": "\u00a77Cart\u00f3grafo",
     "entity.minecraft.villager.cleric": "\u00a77Cl\u00e9rigo",
