--- a/assets/minecraft/lang/pt_pt.json
+++ b/assets/minecraft/lang/pt_pt.json
@@ -37,7 +37,7 @@
     "container.loom": "\u00a77Tear",
     "container.repair": "\u00a77Reparar e renomear",
     "container.shulkerBox": "\u00a77Caixa de shulker",
-    "container.smoker": "\u00a77Defumadouro",
+    "container.smoker": "\u00a77Defumador",
     "container.stonecutter": "\u00a77Cortador de pedras",
     "container.upgrade": "\u00a77Melhorar equipamento",
     "entity.minecraft.chest_minecart": "\u00a77Carrinho de mina com ba\u00fa",
