--- a/assets/minecraft/lang/so_so.json
+++ b/assets/minecraft/lang/so_so.json
@@ -1,4 +1,21 @@
 {
+    "block.minecraft.black_shulker_box": "\u00a77Sanduuqa madow ee madow",
+    "block.minecraft.blue_shulker_box": "\u00a77Sanduuqa shalker buluug",
+    "block.minecraft.brown_shulker_box": "\u00a77Sanduuqa shaleefka bunni",
+    "block.minecraft.cyan_shulker_box": "\u00a77Sanduuqa Crancan Shulker",
+    "block.minecraft.gray_shulker_box": "\u00a77Sanduuqa cawlan",
+    "block.minecraft.green_shulker_box": "\u00a77Sanduuqa cagaaran",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Sanduuqa shalker buluug ah oo fudud",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Sanduuqa Shuck Schker fudud",
+    "block.minecraft.lime_shulker_box": "\u00a77Sanduuqa lime Sholker",
+    "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shuller sanduuqa",
+    "block.minecraft.orange_shulker_box": "\u00a77Sanduuqa shalker oranji",
+    "block.minecraft.pink_shulker_box": "\u00a77Sanduuqa shalker pink",
+    "block.minecraft.purple_shulker_box": "\u00a77Sanduuqa Shuckper",
+    "block.minecraft.red_shulker_box": "\u00a77Sanduuqa Red Sholker",
+    "block.minecraft.shulker_box": "\u00a77Sanduuqa Sholle",
+    "block.minecraft.white_shulker_box": "\u00a77Sanduuqa White Shulle",
+    "block.minecraft.yellow_shulker_box": "\u00a77Sanduuqa shalker jaalaha ah",
     "container.barrel": "\u00a77Foosto",
     "container.blast_furnace": "\u00a77foornada_qarxa",
     "container.grindstone_title": "\u00a77Dayactir & Nadaafad",
