--- a/assets/minecraft/lang/sq_al.json
+++ b/assets/minecraft/lang/sq_al.json
@@ -18,30 +18,30 @@
     "block.minecraft.yellow_shulker_box": "\u00a77Kutia verdhe skuller",
     "container.barrel": "\u00a77Fu\u00e7i",
     "container.beacon": "\u00a77Fener",
-    "container.blast_furnace": "\u00a77Furra shp\u00ebrthimi",
+    "container.blast_furnace": "\u00a77Furr\u00eb Shp\u00ebrthimi",
     "container.brewing": "\u00a77Banak Ila\u00e7esh",
-    "container.cartography_table": "\u00a77Tabela e Hartografis\u00eb",
+    "container.cartography_table": "\u00a77Tavolin\u00eb Hartografije",
     "container.chest": "\u00a77Ark\u00eb",
     "container.chestDouble": "\u00a77S\u00ebnduk i madh",
-    "container.crafting": "\u00a77duke punuar",
+    "container.crafting": "\u00a77Zejtari",
     "container.creative": "\u00a77Selektim i Sendeve",
     "container.dispenser": "\u00a77Gjuajt\u00ebs",
     "container.dropper": "\u00a77Hedh\u00ebs",
-    "container.enchant": "\u00a77P\u00ebrforco",
-    "container.enderchest": "\u00a77Ark\u00eb Ender",
-    "container.furnace": "\u00a77Stuf\u00eb",
-    "container.grindstone_title": "\u00a77Riparim",
+    "container.enchant": "\u00a77P\u00ebrforco Magji",
+    "container.enderchest": "\u00a77Ark\u00eb Enderi",
+    "container.furnace": "\u00a77Stof\u00eb",
+    "container.grindstone_title": "\u00a77Riparo dhe Hiq Magjit\u00eb",
     "container.hopper": "\u00a77Mbledh\u00ebs Sendesh",
     "container.inventory": "\u00a77Inventar",
     "container.lectern": "\u00a77Pupit\u00ebr",
     "container.loom": "\u00a77Tezgjah",
-    "container.repair": "\u00a77Ndreq dhe Em\u00ebro",
+    "container.repair": "\u00a77Riparo dhe Em\u00ebro",
     "container.shulkerBox": "\u00a77Kutia kudh\u00ebr",
-    "container.smoker": "\u00a77Duhanpir\u00ebs",
+    "container.smoker": "\u00a77Bllok Tymosje",
     "container.stonecutter": "\u00a77Gurgdhend\u00ebs",
     "container.upgrade": "\u00a77P\u00ebrmir\u00ebsimi i pajisjeve",
     "entity.minecraft.chest_minecart": "\u00a77Karroc\u00eb me Ark\u00eb",
-    "entity.minecraft.horse": "\u00a77Kali",
+    "entity.minecraft.horse": "\u00a77Kal\u00eb",
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Mushk\u00eb",
     "entity.minecraft.skeleton_horse": "\u00a77Kali Skelet",
@@ -73,14 +73,14 @@
     "itemGroup.inventory": "\u00a77Inventar Mbijetimi",
     "itemGroup.materials": "\u00a77Materiale",
     "itemGroup.misc": "\u00a77Perzier",
-    "itemGroup.redstone": "\u00a77Redstone",
+    "itemGroup.redstone": "\u00a77Redston",
     "itemGroup.search": "\u00a77Kerko artikuj",
     "itemGroup.tools": "\u00a77Mjete",
     "itemGroup.transportation": "\u00a77Transportim",
     "merchant.level.1": "\u00a77Fillestar",
     "merchant.level.2": "\u00a77Nx\u00ebn\u00ebs",
     "merchant.level.3": "\u00a77Pun\u00ebtor i kualifikuar",
-    "merchant.level.4": "\u00a77Njoh\u00ebs",
+    "merchant.level.4": "\u00a77Ekspert",
     "merchant.level.5": "\u00a77Mjesht\u00ebr",
     "merchant.trades": "\u00a77Tregton"
 }
