--- a/assets/minecraft/lang/sr_sp.json
+++ b/assets/minecraft/lang/sr_sp.json
@@ -8,7 +8,7 @@
     "block.minecraft.light_blue_shulker_box": "\u00a77\u0421\u0432\u0435\u0442\u043b\u043e \u043f\u043b\u0430\u0432\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.light_gray_shulker_box": "\u00a77\u0421\u0432\u0435\u0442\u043b\u043e \u0441\u0438\u0432\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.lime_shulker_box": "\u00a77\u0421\u0432\u0435\u0442\u043b\u043e \u0437\u0435\u043b\u0435\u043d\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
-    "block.minecraft.magenta_shulker_box": "\u00a77\u041f\u0443\u0440\u043f\u0443\u0440\u043d\u043e\u0446\u0440\u0432\u0435\u043d\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
+    "block.minecraft.magenta_shulker_box": "\u00a77\u041c\u0430\u0433\u0435\u043d\u0442\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.orange_shulker_box": "\u00a77\u041d\u0430\u0440\u0430\u043d\u045f\u0430\u0441\u0442\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.pink_shulker_box": "\u00a77\u0420\u043e\u0437\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.purple_shulker_box": "\u00a77\u0409\u0443\u0431\u0438\u0447\u0430\u0441\u0442\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
@@ -38,13 +38,13 @@
     "container.repair": "\u00a77\u041f\u043e\u043f\u0440\u0430\u0432\u0438 \u0438 \u0438\u043c\u0435\u043d\u0443\u0458",
     "container.shulkerBox": "\u00a77\u0428\u0443\u043b\u043a\u0435\u0440 \u041a\u0443\u0442\u0438\u0458\u0430",
     "container.smoker": "\u00a77\u041f\u0443\u0448\u043d\u0438\u0446\u0430",
-    "container.stonecutter": "\u00a77\u0420\u0435\u0437\u0430\u0447 \u041a\u0430\u043c\u0435\u043d\u0430",
+    "container.stonecutter": "\u00a77\u0420\u0435\u0437\u0430\u0447 \u043a\u0430\u043c\u0435\u043d\u0430",
     "container.upgrade": "\u00a77\u0423\u043d\u0430\u043f\u0440\u0435\u0434\u0438 \u043e\u043f\u0440\u0435\u043c\u0443",
     "entity.minecraft.chest_minecart": "\u00a77\u041a\u043e\u043b\u0438\u0446\u0430 \u0441\u0430 \u043a\u043e\u0432\u0447\u0435\u0433\u043e\u043c",
     "entity.minecraft.horse": "\u00a77\u041a\u043e\u045a",
     "entity.minecraft.llama": "\u00a77\u041b\u0430\u043c\u0430",
     "entity.minecraft.mule": "\u00a77\u041c\u0430\u0437\u0433\u0430",
-    "entity.minecraft.skeleton_horse": "\u00a77\u041a\u043e\u0441\u0442\u0443\u0440\u0441\u043a\u0438 \u041a\u043e\u045a",
+    "entity.minecraft.skeleton_horse": "\u00a77\u041a\u043e\u0441\u0442\u0443\u0440 \u043a\u043e\u045a\u0430",
     "entity.minecraft.villager": "\u00a77\u0421\u0435\u0459\u0430\u043a",
     "entity.minecraft.villager.armorer": "\u00a77\u041a\u043e\u0432\u0430\u0447 \u043e\u043a\u043b\u043e\u043f\u0430",
     "entity.minecraft.villager.butcher": "\u00a77\u041c\u0435\u0441\u0430\u0440",
