--- a/assets/minecraft/lang/swg.json
+++ b/assets/minecraft/lang/swg.json
@@ -1,5 +1,5 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Schwarzr Kapslarkaschda",
+    "block.minecraft.black_shulker_box": "\u00a77Schvarzr Kapslarkaschda",
     "block.minecraft.blue_shulker_box": "\u00a77Blaur Kapslarkaschda",
     "block.minecraft.brown_shulker_box": "\u00a77Braunr Kapslarkaschda",
     "block.minecraft.cyan_shulker_box": "\u00a77Dirkisr Kapslarkaschda",
@@ -14,7 +14,7 @@
     "block.minecraft.purple_shulker_box": "\u00a77Lillanr Kapslarkaschda",
     "block.minecraft.red_shulker_box": "\u00a77Roatr Kapslarkaschda",
     "block.minecraft.shulker_box": "\u00a77Kapslrkaschda",
-    "block.minecraft.white_shulker_box": "\u00a77Weisr Kapslarkaschda",
+    "block.minecraft.white_shulker_box": "\u00a77Vaisr Kapslarkaschda",
     "block.minecraft.yellow_shulker_box": "\u00a77Gealr Kapslarkaschda",
     "container.barrel": "\u00a77Fass",
     "container.beacon": "\u00a77Leuchtfeuer",
@@ -27,15 +27,15 @@
     "container.creative": "\u00a77Gegenst\u00e4nde",
     "container.dispenser": "\u00a77Werfer",
     "container.dropper": "\u00a77Spender",
-    "container.enchant": "\u00a77Vrzaubra",
+    "container.enchant": "\u00a77Frzaubra",
     "container.enderchest": "\u00a77Endrkischde",
     "container.furnace": "\u00a77Ofen",
-    "container.grindstone_title": "\u00a77Reparieren und entzaubern",
+    "container.grindstone_title": "\u00a77Reparatur & Entzaubern",
     "container.hopper": "\u00a77Trichter",
     "container.inventory": "\u00a77Inventar",
     "container.lectern": "\u00a77Lesepult",
-    "container.loom": "\u00a77Webschduahl",
-    "container.repair": "\u00a77Amboss",
+    "container.loom": "\u00a77Vebschduahl",
+    "container.repair": "\u00a77Reparieren & Benennen",
     "container.shulkerBox": "\u00a77Shulkerkiste",
     "container.smoker": "\u00a77R\u00e4ucherofen",
     "container.stonecutter": "\u00a77Steins\u00e4ge",
@@ -52,9 +52,9 @@
     "entity.minecraft.villager.cleric": "\u00a77Gaischdlichr",
     "entity.minecraft.villager.farmer": "\u00a77Baur",
     "entity.minecraft.villager.fisherman": "\u00a77Anglrm\u00e5",
-    "entity.minecraft.villager.fletcher": "\u00a77Pfeilm\u00e5chr",
+    "entity.minecraft.villager.fletcher": "\u00a77Pfailm\u00e5chr",
     "entity.minecraft.villager.leatherworker": "\u00a77Gerbr",
-    "entity.minecraft.villager.librarian": "\u00a77Biachereim\u00e5",
+    "entity.minecraft.villager.librarian": "\u00a77Biacheraim\u00e5",
     "entity.minecraft.villager.mason": "\u00a77Maurar",
     "entity.minecraft.villager.nitwit": "\u00a77Seckl",
     "entity.minecraft.villager.none": "\u00a77Dearflar",
@@ -75,7 +75,7 @@
     "itemGroup.misc": "\u00a77Graffl",
     "itemGroup.redstone": "\u00a77Roatschdoi",
     "itemGroup.search": "\u00a77Suach",
-    "itemGroup.tools": "\u00a77Werkzuig",
+    "itemGroup.tools": "\u00a77Verkzuig",
     "itemGroup.transportation": "\u00a77Dranschbort",
     "merchant.level.1": "\u00a77Neuling",
     "merchant.level.2": "\u00a77Lehrling",
