--- a/assets/minecraft/lang/szl.json
+++ b/assets/minecraft/lang/szl.json
@@ -25,7 +25,7 @@
     "container.chestDouble": "\u00a77Wielg\u014f kastla",
     "container.crafting": "\u00a77Rycht\u014dwa\u0144y",
     "container.creative": "\u00a77Wyb\u014dr klamota",
-    "container.dispenser": "\u00a77Szczyl\u014fcz",
+    "container.dispenser": "\u00a77Strzyl\u014fcz",
     "container.dropper": "\u00a77Podow\u014fcz",
     "container.enchant": "\u00a77Zamaguj",
     "container.enderchest": "\u00a77Endow\u014f kastla",
@@ -52,7 +52,7 @@
     "entity.minecraft.villager.cleric": "\u00a77Farorz",
     "entity.minecraft.villager.farmer": "\u00a77Gosp\u014fd\u014frz",
     "entity.minecraft.villager.fisherman": "\u00a77Rybj\u014frz",
-    "entity.minecraft.villager.fletcher": "\u00a77Szcza\u0142\u014frz",
+    "entity.minecraft.villager.fletcher": "\u00a77Strza\u0142\u014frz",
     "entity.minecraft.villager.leatherworker": "\u00a77Siodl\u014frz",
     "entity.minecraft.villager.librarian": "\u00a77Ksi\u014dnszk\u014frz",
     "entity.minecraft.villager.mason": "\u00a77Mul\u014frz",
