--- a/assets/minecraft/lang/tl_ph.json
+++ b/assets/minecraft/lang/tl_ph.json
@@ -73,7 +73,7 @@
     "itemGroup.inventory": "\u00a77Imbentaryong Pangkaligtasan",
     "itemGroup.materials": "\u00a77Kagamitan",
     "itemGroup.misc": "\u00a77Iba pa",
-    "itemGroup.redstone": "\u00a77Redstone",
+    "itemGroup.redstone": "\u00a77Kulog",
     "itemGroup.search": "\u00a77Hanapin",
     "itemGroup.tools": "\u00a77Kagamitan",
     "itemGroup.transportation": "\u00a77Sasakyan",
