--- a/assets/minecraft/lang/val_es.json
+++ b/assets/minecraft/lang/val_es.json
@@ -28,7 +28,7 @@
     "container.dispenser": "\u00a77Dispensador",
     "container.dropper": "\u00a77Subministrador",
     "container.enchant": "\u00a77Encanteri",
-    "container.enderchest": "\u00a77Cofre de la Fi",
+    "container.enderchest": "\u00a77Cofre d'Ender",
     "container.furnace": "\u00a77Forn",
     "container.grindstone_title": "\u00a77Repara i desencanta",
     "container.hopper": "\u00a77Tremuja d'objectes",
