--- a/assets/minecraft/lang/ast_es.json
+++ b/assets/minecraft/lang/ast_es.json
@@ -12,7 +12,7 @@
     "block.minecraft.orange_shulker_box": "\u00a77Caxa naranxa de shulker",
     "block.minecraft.pink_shulker_box": "\u00a77Caxa rosa de shulker",
     "block.minecraft.purple_shulker_box": "\u00a77Caxa morada de shulker",
-    "block.minecraft.red_shulker_box": "\u00a77Caxa bermeya de shulker",
+    "block.minecraft.red_shulker_box": "\u00a77Caxa colorada de shulker",
     "block.minecraft.shulker_box": "\u00a77Caxa de shulker",
     "block.minecraft.white_shulker_box": "\u00a77Caxa blanca de shulker",
     "block.minecraft.yellow_shulker_box": "\u00a77Caxa mariella de shulker",
@@ -39,6 +39,7 @@
     "container.shulkerBox": "\u00a77Caxa de shulker",
     "container.smoker": "\u00a77Afumador",
     "container.stonecutter": "\u00a77Cortapiedra",
+    "container.upgrade": "\u00a77Ameyorar equipamientu",
     "entity.minecraft.chest_minecart": "\u00a77Vagoneta con un bagul",
     "entity.minecraft.horse": "\u00a77Caballu",
     "entity.minecraft.llama": "\u00a77Llama",
@@ -68,7 +69,7 @@
     "itemGroup.combat": "\u00a77Engarradiella",
     "itemGroup.decorations": "\u00a77Bloques de decoraci\u00f3n",
     "itemGroup.food": "\u00a77Comida",
-    "itemGroup.hotbar": "\u00a77Barres de ferramientes guardaes",
+    "itemGroup.hotbar": "\u00a77Barres d'oxetos guardaes",
     "itemGroup.inventory": "\u00a77Inventariu de sobrevivencia",
     "itemGroup.materials": "\u00a77Materiales",
     "itemGroup.misc": "\u00a77Miscel\u00e1nea",
