--- a/assets/minecraft/lang/ba_ru.json
+++ b/assets/minecraft/lang/ba_ru.json
@@ -49,7 +49,7 @@
     "entity.minecraft.villager.armorer": "\u00a77\u04a0\u043e\u044f\u04a1\u0441\u044b",
     "entity.minecraft.villager.butcher": "\u00a77\u0418\u0442\u0441\u0435",
     "entity.minecraft.villager.cartographer": "\u00a77\u041a\u0430\u0440\u0442\u043e\u0433\u0440\u0430\u0444",
-    "entity.minecraft.villager.cleric": "\u00a77\u041c\u0443\u043b\u043b\u0430",
+    "entity.minecraft.villager.cleric": "\u00a77\u0420\u0443\u0445\u0430\u043d\u0438",
     "entity.minecraft.villager.farmer": "\u00a77\u0424\u0435\u0440\u043c\u0435\u0440",
     "entity.minecraft.villager.fisherman": "\u00a77\u0411\u0430\u043b\u044b\u04a1\u0441\u044b",
     "entity.minecraft.villager.fletcher": "\u00a77\u0419\u04d9\u0439\u04d9\u0441\u0435",
