--- a/assets/minecraft/lang/fa_ir.json
+++ b/assets/minecraft/lang/fa_ir.json
@@ -73,7 +73,7 @@
     "itemGroup.inventory": "\u00a77\u06a9\u0648\u0644\u0647 \u06cc \u062d\u0627\u0644\u062a \u0628\u0642\u0627",
     "itemGroup.materials": "\u00a77\u0645\u0648\u0627\u062f \u0648 \u0645\u0635\u0627\u0644\u062d",
     "itemGroup.misc": "\u00a77\u0633\u0627\u06cc\u0631 \u0645\u0648\u0627\u0631\u062f",
-    "itemGroup.redstone": "\u00a77\u0631\u0650\u062f\u0650\u0633\u062a\u0648\u0646",
+    "itemGroup.redstone": "\u00a77\u0633\u0646\u06af \u0633\u0631\u062e",
     "itemGroup.search": "\u00a77\u062c\u0633\u062a\u062c\u0648",
     "itemGroup.tools": "\u00a77\u0627\u0628\u0632\u0627\u0631 \u0647\u0627",
     "itemGroup.transportation": "\u00a77\u062d\u0645\u0644 \u0648 \u0646\u0642\u0644",
