--- a/assets/minecraft/lang/kw_gb.json
+++ b/assets/minecraft/lang/kw_gb.json
@@ -20,7 +20,7 @@
     "container.beacon": "\u00a77Golowva",
     "container.blast_furnace": "\u00a77Fog Hwyth",
     "container.brewing": "\u00a77Sav Braga",
-    "container.cartography_table": "\u00a77Moos Mappa",
+    "container.cartography_table": "\u00a77Moos Vappa",
     "container.chest": "\u00a77Kist",
     "container.chestDouble": "\u00a77Kist Vras",
     "container.crafting": "\u00a77Kreftya",
@@ -32,13 +32,13 @@
     "container.furnace": "\u00a77Fog",
     "container.grindstone_title": "\u00a77Ewnhe & Dishusya",
     "container.hopper": "\u00a77Funnel Traow",
-    "container.inventory": "\u00a77Rol",
+    "container.inventory": "\u00a77Rolas",
     "container.lectern": "\u00a77Lennva",
     "container.loom": "\u00a77Starn Gwiader",
     "container.repair": "\u00a77Ewnhe & Henwel",
     "container.shulkerBox": "\u00a77Boks Shulker",
     "container.smoker": "\u00a77Megell",
-    "container.stonecutter": "\u00a77Treghell Men",
+    "container.stonecutter": "\u00a77Treghell Ven",
     "container.upgrade": "\u00a77Ughradh Aparel",
     "entity.minecraft.chest_minecart": "\u00a77Balgert hag Kist",
     "entity.minecraft.horse": "\u00a77Margh",
@@ -65,16 +65,16 @@
     "entity.minecraft.zombie_horse": "\u00a77Margh Zombi",
     "gui.advancements": "\u00a7fAvonsyansow",
     "itemGroup.brewing": "\u00a77Braga",
-    "itemGroup.buildingBlocks": "\u00a77Stockys Drehevyans",
-    "itemGroup.combat": "\u00a77Arvow",
-    "itemGroup.decorations": "\u00a77Stockys Afinus",
+    "itemGroup.buildingBlocks": "\u00a77Stockys Drehevel",
+    "itemGroup.combat": "\u00a77Omladh",
+    "itemGroup.decorations": "\u00a77Stockys Afina",
     "itemGroup.food": "\u00a77Viktuals",
-    "itemGroup.hotbar": "\u00a77Toulvarrys gwithys",
-    "itemGroup.inventory": "\u00a77Rol Treusvewans",
+    "itemGroup.hotbar": "\u00a77Toulvarrys Gwithys",
+    "itemGroup.inventory": "\u00a77Rolas Treusvewans",
     "itemGroup.materials": "\u00a77Daffar",
     "itemGroup.misc": "\u00a77Divers",
-    "itemGroup.redstone": "\u00a77Redstone",
-    "itemGroup.search": "\u00a77Hwilas Traow",
+    "itemGroup.redstone": "\u00a77Men Rudh",
+    "itemGroup.search": "\u00a77Hwilas Taklow",
     "itemGroup.tools": "\u00a77Toulys",
     "itemGroup.transportation": "\u00a77Treusporth",
     "merchant.level.1": "\u00a77Dallether",
