--- a/assets/minecraft/lang/la_la.json
+++ b/assets/minecraft/lang/la_la.json
@@ -8,7 +8,7 @@
     "block.minecraft.light_blue_shulker_box": "\u00a77Aeria Capsa Concheri",
     "block.minecraft.light_gray_shulker_box": "\u00a77Cana Capsa Concheri",
     "block.minecraft.lime_shulker_box": "\u00a77Prasina Capsa Concheri",
-    "block.minecraft.magenta_shulker_box": "\u00a77Rubropurpurea Capsa Concheri",
+    "block.minecraft.magenta_shulker_box": "\u00a77Rubropurpurea capsa concheri",
     "block.minecraft.orange_shulker_box": "\u00a77Aranta Capsa Concheri",
     "block.minecraft.pink_shulker_box": "\u00a77Rosea Capsa Concheri",
     "block.minecraft.purple_shulker_box": "\u00a77Purpurea Capsa Concheri",
@@ -20,31 +20,31 @@
     "container.beacon": "\u00a77Radiator",
     "container.blast_furnace": "\u00a77Caminus",
     "container.brewing": "\u00a77Mixtarius",
-    "container.cartography_table": "\u00a77Mensa Chartographiae",
+    "container.cartography_table": "\u00a77Mensa chartographiae",
     "container.chest": "\u00a77Cista",
     "container.chestDouble": "\u00a77Cista Magna",
     "container.crafting": "\u00a77Fabricatio",
     "container.creative": "\u00a77Electio Reris",
     "container.dispenser": "\u00a77proiciens",
-    "container.dropper": "\u00a77donor",
+    "container.dropper": "\u00a77Demittetrum",
     "container.enchant": "\u00a77Incanta",
     "container.enderchest": "\u00a77Cista Finalis",
     "container.furnace": "\u00a77Fornax",
     "container.grindstone_title": "\u00a77Reficere Delustrareque",
-    "container.hopper": "\u00a77Tradetrum Reris",
+    "container.hopper": "\u00a77Infundibulum rerum",
     "container.inventory": "\u00a77Inventarium",
     "container.lectern": "\u00a77Lectrum",
-    "container.loom": "\u00a77Textor",
+    "container.loom": "\u00a77Tela",
     "container.repair": "\u00a77Reparare et nominare",
     "container.shulkerBox": "\u00a77Capsa Concheri",
     "container.smoker": "\u00a77Fumigator",
     "container.stonecutter": "\u00a77Saxumsecator",
-    "container.upgrade": "\u00a77Meliora Res",
-    "entity.minecraft.chest_minecart": "\u00a77Plaustrum Fodinae cum Cista",
+    "container.upgrade": "\u00a77Meliora res",
+    "entity.minecraft.chest_minecart": "\u00a77Plaustrum fodinae cum cista",
     "entity.minecraft.horse": "\u00a77Equus",
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Mulus",
-    "entity.minecraft.skeleton_horse": "\u00a77Equus Sceletalis",
+    "entity.minecraft.skeleton_horse": "\u00a77Equus sceletalis",
     "entity.minecraft.villager": "\u00a77Vicanus",
     "entity.minecraft.villager.armorer": "\u00a77Armifaber",
     "entity.minecraft.villager.butcher": "\u00a77Lanius",
@@ -53,7 +53,7 @@
     "entity.minecraft.villager.farmer": "\u00a77Agricola",
     "entity.minecraft.villager.fisherman": "\u00a77Piscator",
     "entity.minecraft.villager.fletcher": "\u00a77Sagittarius",
-    "entity.minecraft.villager.leatherworker": "\u00a77Artifex Corii",
+    "entity.minecraft.villager.leatherworker": "\u00a77Operarius corii",
     "entity.minecraft.villager.librarian": "\u00a77Bibliothecarius",
     "entity.minecraft.villager.mason": "\u00a77Caementarius",
     "entity.minecraft.villager.nitwit": "\u00a77Stultus",
@@ -61,15 +61,15 @@
     "entity.minecraft.villager.shepherd": "\u00a77Pastor",
     "entity.minecraft.villager.toolsmith": "\u00a77Faber Instrumenti",
     "entity.minecraft.villager.weaponsmith": "\u00a77Faber Ferri",
-    "entity.minecraft.wandering_trader": "\u00a77Mercator Vagus",
-    "entity.minecraft.zombie_horse": "\u00a77Equus Resurrectus",
+    "entity.minecraft.wandering_trader": "\u00a77Mercator vagus",
+    "entity.minecraft.zombie_horse": "\u00a77Equus resurrectus",
     "gui.advancements": "\u00a7fIncrementa",
-    "itemGroup.brewing": "\u00a77Alchimia",
-    "itemGroup.buildingBlocks": "\u00a77Materiae constuctionis",
+    "itemGroup.brewing": "\u00a77Alchymia",
+    "itemGroup.buildingBlocks": "\u00a77Materiae aedificationis",
     "itemGroup.combat": "\u00a77Proelium",
     "itemGroup.decorations": "\u00a77Materiae ornamentorum",
     "itemGroup.food": "\u00a77Cibi",
-    "itemGroup.hotbar": "\u00a77Res Vectis Servata",
+    "itemGroup.hotbar": "\u00a77Res vectis servata",
     "itemGroup.inventory": "\u00a77Inventarium Sustinentiae",
     "itemGroup.materials": "\u00a77Materiae",
     "itemGroup.misc": "\u00a77Miscellaneus",
