--- a/assets/minecraft/lang/lt_lt.json
+++ b/assets/minecraft/lang/lt_lt.json
@@ -2,15 +2,15 @@
     "block.minecraft.black_shulker_box": "\u00a77Juoda \u0161ulkerio d\u0117\u017e\u0117",
     "block.minecraft.blue_shulker_box": "\u00a77M\u0117lyna \u0161ulkerio d\u0117\u017e\u0117",
     "block.minecraft.brown_shulker_box": "\u00a77Ruda \u0161ulkerio d\u0117\u017e\u0117",
-    "block.minecraft.cyan_shulker_box": "\u00a77\u017dalsvai m\u0117lyna \u0161ulkerio d\u0117\u017e\u0117",
+    "block.minecraft.cyan_shulker_box": "\u00a77Tamsiai \u017eydra \u0161ulkerio d\u0117\u017e\u0117",
     "block.minecraft.gray_shulker_box": "\u00a77Pilka \u0161ulkerio d\u0117\u017e\u0117",
     "block.minecraft.green_shulker_box": "\u00a77\u017dalia \u0161ulkerio d\u0117\u017e\u0117",
-    "block.minecraft.light_blue_shulker_box": "\u00a77\u0160viesiai m\u0117lyna \u0161ulkerio d\u0117\u017e\u0117",
+    "block.minecraft.light_blue_shulker_box": "\u00a77\u017dydra \u0161ulkerio d\u0117\u017e\u0117",
     "block.minecraft.light_gray_shulker_box": "\u00a77\u0160viesiai pilka \u0161ulkerio d\u0117\u017e\u0117",
-    "block.minecraft.lime_shulker_box": "\u00a77Gelsvai \u017ealsva \u0161ulkerio d\u0117\u017e\u0117",
-    "block.minecraft.magenta_shulker_box": "\u00a77Rausvai raudona \u0161ulkerio d\u0117\u017e\u0117",
+    "block.minecraft.lime_shulker_box": "\u00a77\u0160viesiai \u017ealia \u0161ulkerio d\u0117\u017e\u0117",
+    "block.minecraft.magenta_shulker_box": "\u00a77\u0160viesiai purpurin\u0117 \u0161ulkerio d\u0117\u017e\u0117",
     "block.minecraft.orange_shulker_box": "\u00a77Oran\u017ein\u0117 \u0161ulkerio d\u0117\u017e\u0117",
-    "block.minecraft.pink_shulker_box": "\u00a77Ro\u017ein\u0117 \u0161ulkerio d\u0117\u017e\u0117",
+    "block.minecraft.pink_shulker_box": "\u00a77Rausva \u0161ulkerio d\u0117\u017e\u0117",
     "block.minecraft.purple_shulker_box": "\u00a77Purpurin\u0117 \u0161ulkerio d\u0117\u017e\u0117",
     "block.minecraft.red_shulker_box": "\u00a77Raudona \u0161ulkerio d\u0117\u017e\u0117",
     "block.minecraft.shulker_box": "\u00a77\u0160ulkerio d\u0117\u017e\u0117",
@@ -39,12 +39,12 @@
     "container.shulkerBox": "\u00a77\u0160ulkerio d\u0117\u017e\u0117",
     "container.smoker": "\u00a77R\u016bkykla",
     "container.stonecutter": "\u00a77Akmens pjaustykl\u0117",
-    "container.upgrade": "\u00a77Patobulinti daiktus",
+    "container.upgrade": "\u00a77Patobulinti \u012frankius",
     "entity.minecraft.chest_minecart": "\u00a77Vagon\u0117lis su skrynia",
     "entity.minecraft.horse": "\u00a77Arklys",
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Mulas",
-    "entity.minecraft.skeleton_horse": "\u00a77Arklys skeletas",
+    "entity.minecraft.skeleton_horse": "\u00a77Skeletas arklys",
     "entity.minecraft.villager": "\u00a77Kaimietis",
     "entity.minecraft.villager.armorer": "\u00a77\u0160arv\u0173 kalvis",
     "entity.minecraft.villager.butcher": "\u00a77M\u0117sininkas",
@@ -61,7 +61,7 @@
     "entity.minecraft.villager.shepherd": "\u00a77Piemuo",
     "entity.minecraft.villager.toolsmith": "\u00a77\u012eranki\u0173 meistras",
     "entity.minecraft.villager.weaponsmith": "\u00a77Ginklakalys",
-    "entity.minecraft.wandering_trader": "\u00a77Keliaujantis pirklys",
+    "entity.minecraft.wandering_trader": "\u00a77Klajojantis pirklys",
     "entity.minecraft.zombie_horse": "\u00a77Arklys zombis",
     "gui.advancements": "\u00a7fPasiekimai",
     "itemGroup.brewing": "\u00a77Eliksyrai",
