--- a/assets/minecraft/lang/qya_aa.json
+++ b/assets/minecraft/lang/qya_aa.json
@@ -1,60 +1,67 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Mor\u00eb colca hyalmal\u00f3m\u00ebo",
-    "block.minecraft.blue_shulker_box": "\u00a77Luin\u00eb colca hyalmal\u00f3m\u00ebo",
-    "block.minecraft.brown_shulker_box": "\u00a77Varn\u00eb colca hyalmal\u00f3m\u00ebo",
-    "block.minecraft.cyan_shulker_box": "\u00a77\u00cbareluin\u00eb colca hyalmal\u00f3m\u00ebo",
-    "block.minecraft.gray_shulker_box": "\u00a77Sinda Colca Hyulcerwa",
-    "block.minecraft.green_shulker_box": "\u00a77Laica colca hyalmal\u00f3m\u00ebo",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Helwa colca hyalmal\u00f3m\u00ebo",
-    "block.minecraft.light_gray_shulker_box": "\u00a77M\u00eds\u00eb Colca Hyulcerwa",
-    "block.minecraft.lime_shulker_box": "\u00a77Venya colca hyalmal\u00f3m\u00ebo",
-    "block.minecraft.magenta_shulker_box": "\u00a77Mangenta Colca Hyulcerwa",
-    "block.minecraft.orange_shulker_box": "\u00a77Culuina colca hyalmal\u00f3m\u00ebo",
-    "block.minecraft.pink_shulker_box": "\u00a77Campiloss\u00eb colca hyalmal\u00f3m\u00ebo",
-    "block.minecraft.purple_shulker_box": "\u00a77Helin colca hyalmal\u00f3m\u00ebo",
-    "block.minecraft.red_shulker_box": "\u00a77Carn\u00eb colca hyalmal\u00f3m\u00ebo",
+    "block.minecraft.black_shulker_box": "\u00a77Mor\u00eb colca Hyulcero",
+    "block.minecraft.blue_shulker_box": "\u00a77Luin\u00eb colca Hyulcero",
+    "block.minecraft.brown_shulker_box": "\u00a77Varn\u00eb colca Hyulcero",
+    "block.minecraft.cyan_shulker_box": "\u00a77Fanyaluin\u00eb colca Hyulcero",
+    "block.minecraft.gray_shulker_box": "\u00a77Sinda colca Hyulcero",
+    "block.minecraft.green_shulker_box": "\u00a77Laica colca Hyulcero",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Helwa colca Hyulcero",
+    "block.minecraft.light_gray_shulker_box": "\u00a77M\u00eds\u00eb colca Hyulcero",
+    "block.minecraft.lime_shulker_box": "\u00a77Venya colca Hyulcero",
+    "block.minecraft.magenta_shulker_box": "\u00a77Mangenta colca Hyulcero",
+    "block.minecraft.orange_shulker_box": "\u00a77Culuina colca Hyulcero",
+    "block.minecraft.pink_shulker_box": "\u00a77Fanyacarn\u00eb colca Hyulcero",
+    "block.minecraft.purple_shulker_box": "\u00a77Luicarn\u00eb colca Hyulcero",
+    "block.minecraft.red_shulker_box": "\u00a77Carn\u00eb colca Hyulcero",
     "block.minecraft.shulker_box": "\u00a77Colca Hyulcero",
-    "block.minecraft.white_shulker_box": "\u00a77Ninqu\u00eb colca hyalmal\u00f3m\u00ebo",
-    "block.minecraft.yellow_shulker_box": "\u00a77Malina colca hyalmal\u00f3m\u00ebo",
+    "block.minecraft.white_shulker_box": "\u00a77Ninqu\u00eb colca Hyulcero",
+    "block.minecraft.yellow_shulker_box": "\u00a77Malina colca Hyulcero",
+    "container.blast_furnace": "\u00a77Ticutait\u00eb urna",
     "container.chest": "\u00a77Taucolca",
     "container.chestDouble": "\u00a77Hoa Taucolca",
-    "container.crafting": "\u00a77Tani\u00eb",
+    "container.crafting": "\u00a77Tami\u00eb",
     "container.creative": "\u00a77Cilm\u00eb Natwa",
     "container.enchant": "\u00a77Luhta",
     "container.enderchest": "\u00a77Taucolca Endeva",
     "container.furnace": "\u00a77Urna",
+    "container.inventory": "\u00a77Auri\u00eb",
     "container.repair": "\u00a77Envinyata ar anta aness\u00eb",
-    "container.shulkerBox": "\u00a77Colca hyalmal\u00f3m\u00ebo",
-    "entity.minecraft.chest_minecart": "\u00a77Rax' as Taucolca",
+    "container.shulkerBox": "\u00a77Colca Hyulcero",
+    "entity.minecraft.chest_minecart": "\u00a77Rax' as taucolca",
     "entity.minecraft.horse": "\u00a77Rocco",
-    "entity.minecraft.llama": "\u00a77M\u00fapalumpo",
+    "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.skeleton_horse": "\u00a77N\u00e1varocco",
-    "entity.minecraft.villager": "\u00a77Mastomaror",
-    "entity.minecraft.villager.armorer": "\u00a77Ambassetano",
+    "entity.minecraft.villager": "\u00a77Opelemo",
+    "entity.minecraft.villager.armorer": "\u00a77Varmaro",
     "entity.minecraft.villager.butcher": "\u00a77Lamannehtar",
-    "entity.minecraft.villager.farmer": "\u00a77Nandor",
-    "entity.minecraft.villager.fisherman": "\u00a77Lingwirembaro",
+    "entity.minecraft.villager.cleric": "\u00a77Cordamo",
+    "entity.minecraft.villager.farmer": "\u00a77Cemendur",
+    "entity.minecraft.villager.fisherman": "\u00a77Lingwimo",
     "entity.minecraft.villager.fletcher": "\u00a77Pilintano",
     "entity.minecraft.villager.leatherworker": "\u00a77Alumo",
-    "entity.minecraft.villager.librarian": "\u00a77Istyar",
-    "entity.minecraft.villager.none": "\u00a77Mastomaror",
+    "entity.minecraft.villager.librarian": "\u00a77Parmasson",
+    "entity.minecraft.villager.mason": "\u00a77Ontamo",
+    "entity.minecraft.villager.none": "\u00a77Opelemo",
     "entity.minecraft.villager.shepherd": "\u00a77M\u00e1mandil",
+    "entity.minecraft.villager.toolsmith": "\u00a77Carmatan",
+    "entity.minecraft.villager.weaponsmith": "\u00a77Maicatan",
     "entity.minecraft.zombie_horse": "\u00a77Urcoya Rocco",
     "itemGroup.brewing": "\u00a77\u00d3quantal\u00eb",
     "itemGroup.buildingBlocks": "\u00a77Ronwar Carastal\u00ebo",
     "itemGroup.combat": "\u00a77Mahti\u00eb",
     "itemGroup.decorations": "\u00a77Ronwar Fintass\u00ebo",
-    "itemGroup.food": "\u00a77Matso",
-    "itemGroup.inventory": "\u00a77Vori\u00eb armar",
+    "itemGroup.food": "\u00a77Matta",
+    "itemGroup.hotbar": "\u00a77Renin\u00eb fert\u00e9mar",
+    "itemGroup.inventory": "\u00a77Auri\u00eb",
     "itemGroup.materials": "\u00a77Talmermali",
     "itemGroup.redstone": "\u00a77Redstone",
     "itemGroup.search": "\u00a77Saca Nati",
     "itemGroup.tools": "\u00a77Tammar",
     "itemGroup.transportation": "\u00a77Levi\u00eb",
-    "merchant.level.1": "\u00a77M\u00edn\u00eb",
-    "merchant.level.2": "\u00a77Parind\u00eb",
-    "merchant.level.3": "\u00a77Satar",
-    "merchant.level.4": "\u00a77N\u00f3l\u00ebm\u00eb",
+    "merchant.level.1": "\u00a77Yestamo",
+    "merchant.level.2": "\u00a77Parmo",
+    "merchant.level.3": "\u00a77M\u00f3tamo",
+    "merchant.level.4": "\u00a77Nolmo",
     "merchant.level.5": "\u00a77Ingolmo",
     "merchant.trades": "\u00a77Ant\u00eb"
 }
