--- a/assets/minecraft/lang/se_no.json
+++ b/assets/minecraft/lang/se_no.json
@@ -22,17 +22,17 @@
     "container.brewing": "\u00a77Vuo\u0161\u0161ahat",
     "container.cartography_table": "\u00a77K\u00e1rttenbeavdi",
     "container.chest": "\u00a77Bumb\u00e1",
-    "container.chestDouble": "\u00a77Stuora Bumb\u00e1",
+    "container.chestDouble": "\u00a77Stuora bumb\u00e1",
     "container.crafting": "\u00a77Duddjon",
     "container.creative": "\u00a77D\u00e1vvir V\u00e1lljen",
     "container.dispenser": "\u00a77B\u00e1lkessteaddji",
     "container.dropper": "\u00a77Luoitaleaddji",
     "container.enchant": "\u00a77Noido",
-    "container.enderchest": "\u00a77Endor Bumb\u00e1",
+    "container.enderchest": "\u00a77Endorbumb\u00e1",
     "container.furnace": "\u00a77Ovdna",
     "container.grindstone_title": "\u00a77Divo & sihko noidosa",
-    "container.hopper": "\u00a77D\u00e1vvir Njammaleaddji",
-    "container.inventory": "\u00a77Invent\u00e1ra",
+    "container.hopper": "\u00a77D\u00e1vvirnjaman",
+    "container.inventory": "\u00a77D\u00e1vvirvuork\u00e1",
     "container.lectern": "\u00a77Lohkanbeavdi",
     "container.loom": "\u00a77Go\u0111\u0111i",
     "container.repair": "\u00a77Divo & atte nama",
@@ -40,7 +40,7 @@
     "container.smoker": "\u00a77Suovastuhtte",
     "container.stonecutter": "\u00a77Gea\u0111geluddejeaddji",
     "container.upgrade": "\u00a77Buoridahtte d\u00e1vviriid",
-    "entity.minecraft.chest_minecart": "\u00a77Roggangielk\u00e1 mas Bumb\u00e1",
+    "entity.minecraft.chest_minecart": "\u00a77Roggangielk\u00e1 mas bumb\u00e1",
     "entity.minecraft.horse": "\u00a77Heasta",
     "entity.minecraft.llama": "\u00a77Llama",
     "entity.minecraft.mule": "\u00a77Muvla",
@@ -70,7 +70,7 @@
     "itemGroup.decorations": "\u00a77Hervenblohkat",
     "itemGroup.food": "\u00a77Biebmu",
     "itemGroup.hotbar": "\u00a77Vurkejuvvon reaidolinnj\u00e1t",
-    "itemGroup.inventory": "\u00a77Ie\u0161birgen invent\u00e1ra",
+    "itemGroup.inventory": "\u00a77Ie\u0161birgema d\u00e1vvirvuork\u00e1",
     "itemGroup.materials": "\u00a77Materi\u00e1lat",
     "itemGroup.misc": "\u00a77Ear\u00e1",
     "itemGroup.redstone": "\u00a77Redstone",
