--- a/assets/minecraft/lang/vec_it.json
+++ b/assets/minecraft/lang/vec_it.json
@@ -39,13 +39,13 @@
     "container.shulkerBox": "\u00a77Sc\u00e0to\u0142a de shulker",
     "container.smoker": "\u00a77Fumegador",
     "container.stonecutter": "\u00a77Tajapiere",
-    "container.upgrade": "\u00a77Mejora un ozeto",
+    "container.upgrade": "\u00a77Mejora un trape\u0142o",
     "entity.minecraft.chest_minecart": "\u00a77Carel co' ba\u00f9l",
     "entity.minecraft.horse": "\u00a77Caval",
     "entity.minecraft.llama": "\u00a77\u0141ama",
     "entity.minecraft.mule": "\u00a77Mu\u0142o",
     "entity.minecraft.skeleton_horse": "\u00a77Caval sch\u00e8\u0142etro",
-    "entity.minecraft.villager": "\u00a77Paezan",
+    "entity.minecraft.villager": "\u00a77Paesan",
     "entity.minecraft.villager.armorer": "\u00a77Corasar",
     "entity.minecraft.villager.butcher": "\u00a77Becar",
     "entity.minecraft.villager.cartographer": "\u00a77Cart\u00f2grafo",
@@ -57,7 +57,7 @@
     "entity.minecraft.villager.librarian": "\u00a77\u0141ibrar",
     "entity.minecraft.villager.mason": "\u00a77Murador",
     "entity.minecraft.villager.nitwit": "\u00a77Ba\u00f9co",
-    "entity.minecraft.villager.none": "\u00a77Paezan",
+    "entity.minecraft.villager.none": "\u00a77Paesan",
     "entity.minecraft.villager.shepherd": "\u00a77Pastor",
     "entity.minecraft.villager.toolsmith": "\u00a77F\u00e0brica arte",
     "entity.minecraft.villager.weaponsmith": "\u00a77Armarol",
