--- a/assets/minecraft/lang/yo_ng.json
+++ b/assets/minecraft/lang/yo_ng.json
@@ -64,7 +64,19 @@
     "entity.minecraft.wandering_trader": "\u00a77Oni\u1e63owo Onijaja",
     "entity.minecraft.zombie_horse": "\u00a77\u1eb8\u1e63in Ebora",
     "gui.advancements": "\u00a7fAw\u1ecdn ilosiwaju",
+    "itemGroup.brewing": "\u00a77Pip\u1ecdnti",
+    "itemGroup.buildingBlocks": "\u00a77Aw\u1ecdn bul\u1ecd\u1ecdki ile",
+    "itemGroup.combat": "\u00a77Ija",
+    "itemGroup.decorations": "\u00a77Aw\u1ecdn bul\u1ecd\u1ecdki \u1ecc\u1e63\u1ecd",
+    "itemGroup.food": "\u00a77Aw\u1ecdn ounj\u1eb9",
     "itemGroup.hotbar": "\u00a77Aw\u1ecdn Ohun elo Ifipam\u1ecd",
+    "itemGroup.inventory": "\u00a77Oja Iwalaaye",
+    "itemGroup.materials": "\u00a77Aw\u1ecdn ohun elo",
+    "itemGroup.misc": "\u00a77Orisirisi",
+    "itemGroup.redstone": "\u00a77Redstone",
+    "itemGroup.search": "\u00a77Search Aw\u1ecdn ohun kan",
+    "itemGroup.tools": "\u00a77Aw\u1ecdn irin\u1e63\u1eb9",
+    "itemGroup.transportation": "\u00a77Gbigbe",
     "merchant.level.1": "\u00a77O\u1e63u k\u1ecdkanla",
     "merchant.level.2": "\u00a77Ib\u1eb9k\u1ecd",
     "merchant.level.3": "\u00a77Oludaduro",
